--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "theme_color": "#088000",
     "icons": [
         {
-            "src": "icon.png",
+            "src": "icon.png/image.png",
             "sizes": "192x192",
             "type": "image.png"
         }
